finished setting up boilerplate

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "restful-react-from-scratch",
+  "name": "team-blender",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
