--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
+    "knex": "^0.14.6",
     "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
