--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "knex": "^0.14.6",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "sqlite3": "^4.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
