--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon server & yarn build --watch",
     "build": "webpack --config client/webpack.config.js",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "babel": {
     "presets": [
@@ -34,7 +34,7 @@
     "babel-register": "^6.26.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "jest": "^22.4.3",
+    "jest": "^23.2.0",
     "jsdom": "^11.8.0",
     "nodemon": "^1.17.5",
     "react": "^16.3.2",
